; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-font.c_ui_measure_string_part.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-font.c_ui_measure_string_part.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @ui_measure_string_part(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca float, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  store float 0.000000e+00, float* %6, align 4
  br label %7

7:                                                ; preds = %11, %2
  %8 = load i8*, i8** %3, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = icmp ult i8* %8, %9
  br i1 %10, label %11, label %22

11:                                               ; preds = %7
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @fz_chartorune(i32* %5, i8* %12)
  %14 = load i8*, i8** %3, align 8
  %15 = sext i32 %13 to i64
  %16 = getelementptr inbounds i8, i8* %14, i64 %15
  store i8* %16, i8** %3, align 8
  %17 = load i32, i32* %5, align 4
  %18 = call i64 @ui_measure_character(i32 %17)
  %19 = sitofp i64 %18 to float
  %20 = load float, float* %6, align 4
  %21 = fadd float %20, %19
  store float %21, float* %6, align 4
  br label %7

22:                                               ; preds = %7
  %23 = load float, float* %6, align 4
  ret float %23
}

declare dso_local i32 @fz_chartorune(i32*, i8*) #1

declare dso_local i64 @ui_measure_character(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
